# cmc-agent-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: full-workflow-memo.md  full-workflow-state.json  property-package-memo.md  property-package-state.json  rl-policy-memo.md  rl-policy-state.json
docs/: architecture.md  evaluation.md  product-plan.md  reinforcement-learning.md  research-brief.md  simulator-stack.md
examples/: property_package_screen.yaml  rl_experiment_policy.yaml  small_molecule_process.yaml
src/cmc_agent_lab/: __init__.py  __main__.py  audit.py  graph.py  planning.py  registry.py  schema.py  workflow.py
src/cmc_agent_lab/agents/: auditor.py  experiment_designer.py  objective.py  reporter.py  risk.py  rl_policy.py  simulator.py  surrogate.py  tool_planner.py
src/cmc_agent_lab/optimization/: __init__.py  active_learning.py
src/cmc_agent_lab/rl/: __init__.py  env.py  policy.py  reward.py
src/cmc_agent_lab/simulators/: __init__.py  adapters.py  builtin.py  thermo_chemicals.py
tests/: test_optimization.py  test_planning.py  test_rl.py  test_simulators.py  test_workflow.py
