[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cmc-agent-lab"
version = "0.1.0"
description = "An auditable LangGraph workbench for CMC process development, mechanistic simulation, and adaptive experiment planning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kewal Mishra" }
]
keywords = [
  "langgraph",
  "cmc",
  "pharmaceutical-development",
  "process-development",
  "mechanistic-modeling",
  "bayesian-optimization",
  "quality-by-design",
  "agentic-ai"
]
dependencies = [
  "langgraph>=0.2.55",
  "numpy>=1.26",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.12"
]

[project.optional-dependencies]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3"
]
property = [
  "thermo>=0.6",
  "chemicals>=1.5",
  "fluids>=1.3"
]
simulators = [
  "cantera>=3.0",
  "thermo>=0.6",
  "chemicals>=1.5",
  "fluids>=1.3",
  "pyomo>=6.8"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.urls]
Homepage = "https://github.com/kewalmishra/cmc-agent-lab"
Repository = "https://github.com/kewalmishra/cmc-agent-lab"
Documentation = "https://github.com/kewalmishra/cmc-agent-lab/tree/main/docs"

[project.scripts]
cmc-agent-lab = "cmc_agent_lab.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmc_agent_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
